fixed button overlapping on MovieDetail mobile

--- a/src/pages/MovieDetail/_movieDetail.scss
+++ b/src/pages/MovieDetail/_movieDetail.scss
@@ -244,6 +244,8 @@ width:100%;
     }
 
     .trailer {
+      display: flex;
+
       .button-play-video {
         padding: 8px 20px;
         border-radius: 40px;
@@ -258,7 +260,7 @@ width:100%;
         &:hover {
           transform: scale(1.07);
           z-index: 1;
-          margin-left: 7.5px;
+          margin-left: 4px;
         }
       }
 
